--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
+        app:srcCompat="@drawable/galge"
         android:id="@+id/hangman_imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
