--- a/app/src/main/res/layout/activity_vinder.xml
+++ b/app/src/main/res/layout/activity_vinder.xml
@@ -34,11 +34,12 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:textColor="#000000"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="50dp"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@id/trophy_image"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/winner_text"/>
 
     <ImageView
         android:id="@+id/trophy_image"
