--- a/app/src/main/res/layout/activity_vinder.xml
+++ b/app/src/main/res/layout/activity_vinder.xml
@@ -3,53 +3,55 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/winner_image"
-        android:layout_width="208dp"
-        android:layout_height="165dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/winner" />
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/winner_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="sans-serif"
         android:text="Du har vundet \nDet tog dig kun"
-        android:textColor="#000000"
+        android:textColor="#FFF"
         android:textSize="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/winner_image" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tryCount_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
-        android:textColor="#000000"
-        android:layout_marginBottom="50dp"
+        android:textColor="#FFF"
         android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@id/trophy_image"
+        tools:text="4"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/winner_text"/>
+        app:layout_constraintTop_toBottomOf="@id/winner_text" />
 
-    <ImageView
-        android:id="@+id/trophy_image"
-        android:layout_width="153dp"
-        android:layout_height="149dp"
-        android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <TextView
+        android:layout_marginTop="200dp"
+        android:id="@+id/highScore_title_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Highscore list"
+        android:textColor="#FFF"
+        android:textSize="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tryCount_text" />
 
-        app:srcCompat="@drawable/trophy" />
+    <view
+        class="androidx.appcompat.app.AlertController$RecycleListView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/highScore_title_text"
+
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
