--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,11 @@
         android:id="@+id/word_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/background_light"
+        android:textColor="#FFF"
         app:layout_constraintBottom_toTopOf="@id/hangman_imageView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/letter_guess"
-        tools:layout_editor_absoluteX="163dp"
-        tools:layout_editor_absoluteY="167dp" />
+        app:layout_constraintTop_toBottomOf="@id/letter_guess" />
 
     <ImageView
         android:id="@+id/hangman_imageView"
