--- a/app/src/main/res/layout/activity_vinder.xml
+++ b/app/src/main/res/layout/activity_vinder.xml
@@ -44,14 +44,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tryCount_text" />
 
-    <view
-        class="androidx.appcompat.app.AlertController$RecycleListView"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/highScore_title_text"
-
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
