--- a/app/src/main/res/layout/highscore_row.xml
+++ b/app/src/main/res/layout/highscore_row.xml
@@ -2,14 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="30dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:background="#000">
 
     <TextView
         android:id="@+id/name_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Navn"
-        android:textColor="#000"
+
+        android:textColor="#FF5722"
         android:textSize="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/tries_highScore"
@@ -19,9 +22,9 @@
         android:id="@+id/tries_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="50dp"
         android:text="Antal Forkerte gæt"
-        android:textColor="#000"
+        android:textColor="#FFF"
         android:textSize="20dp"
         app:layout_constraintLeft_toRightOf="@id/name_highScore"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,9 +34,9 @@
         android:id="@+id/word_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="50dp"
         android:text="Ord"
-        android:textColor="#000"
+        android:textColor="#FFF"
         android:textSize="20dp"
         app:layout_constraintLeft_toRightOf="@id/tries_highScore"
         app:layout_constraintTop_toTopOf="parent" />
