--- a/app/src/main/res/layout/highscore_row.xml
+++ b/app/src/main/res/layout/highscore_row.xml
@@ -11,8 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Navn"
-
-        android:textColor="#FF5722"
+        android:textColor="#FFF"
         android:textSize="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/tries_highScore"
@@ -22,7 +21,7 @@
         android:id="@+id/tries_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="75dp"
         android:text="Antal Forkerte gæt"
         android:textColor="#FFF"
         android:textSize="20dp"
@@ -34,7 +33,7 @@
         android:id="@+id/word_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="75dp"
         android:text="Ord"
         android:textColor="#FFF"
         android:textSize="20dp"
