--- a/app/src/main/res/layout/activity_vinder.xml
+++ b/app/src/main/res/layout/activity_vinder.xml
@@ -26,17 +26,16 @@
         android:fontFamily="sans-serif"
         android:textColor="#FFF"
         android:textSize="30dp"
-        tools:text="4"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/winner_text" />
-
+        app:layout_constraintTop_toBottomOf="@id/winner_text"
+        tools:text="4" />
 
     <TextView
-        android:layout_marginTop="200dp"
         android:id="@+id/highScore_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
         android:text="Highscore list"
         android:textColor="#FFF"
         android:textSize="15dp"
@@ -48,44 +47,42 @@
         android:id="@+id/name_highScoreList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Navn"
+        android:layout_marginLeft="60dp"
         android:layout_marginTop="10dp"
+        android:text="Navn"
         android:textColor="#FFF"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/highScore_title_text"
-        android:layout_marginLeft="60dp"
-        />
-
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forsøg"
-        android:textColor="#FFF"
-        app:layout_constraintRight_toLeftOf="@id/word_highScoreList"
-        app:layout_constraintLeft_toRightOf="@id/name_highScoreList"
         app:layout_constraintTop_toBottomOf="@id/highScore_title_text" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:text="Forsøg"
+        android:textColor="#FFF"
+        app:layout_constraintLeft_toRightOf="@id/name_highScoreList"
+        app:layout_constraintRight_toLeftOf="@id/word_highScoreList"
+        app:layout_constraintTop_toBottomOf="@id/highScore_title_text" />
+
+    <TextView
         android:id="@+id/word_highScoreList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="60dp"
         android:text="Ord"
         android:textColor="#FFF"
-        android:layout_marginRight="60dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/highScore_title_text" />
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="15dp"
         android:id="@+id/recyclerView_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name_highScoreList"
-        />
+        app:layout_constraintTop_toBottomOf="@id/name_highScoreList" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
