--- a/app/src/main/res/layout/highscore_row.xml
+++ b/app/src/main/res/layout/highscore_row.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="30dp"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:background="#000">
 
     <TextView
@@ -12,32 +12,29 @@
         android:layout_height="wrap_content"
         android:text="Navn"
         android:textColor="#FFF"
-        android:textSize="20dp"
+        android:textSize="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/tries_highScore"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tries_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="75dp"
         android:text="Antal Forkerte gæt"
         android:textColor="#FFF"
-        android:textSize="20dp"
-        app:layout_constraintLeft_toRightOf="@id/name_highScore"
+        android:textSize="15dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/word_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="75dp"
         android:text="Ord"
         android:textColor="#FFF"
-        android:textSize="20dp"
-        app:layout_constraintLeft_toRightOf="@id/tries_highScore"
+        android:textSize="15dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
