--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:background="#5C93AE"
+        android:fontFamily="@font/turret_road_regular"
         android:ems="10"
         android:hint="Gæt et bogstav"
         android:inputType="textPersonName"
@@ -25,6 +26,7 @@
         android:id="@+id/word_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/turret_road_regular"
         android:textColor="#FFF"
         app:layout_constraintBottom_toTopOf="@id/hangman_imageView"
         app:layout_constraintLeft_toLeftOf="parent"
