--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,54 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background">
 
     <TextView
         android:id="@+id/game_title_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="75dp"
+        android:fontFamily="@font/turret_road_bold"
         android:text="Hangman"
-        android:textSize="50dp"
         android:textColor="#FFF"
+        android:textSize="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="75dp"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/enter_name_menu"
-        android:maxLength="9"
         android:layout_width="250dp"
         android:layout_height="30dp"
-        android:textColor="#FFF"
+        android:layout_marginTop="75dp"
+        android:background="@color/buttonColor"
+        android:fontFamily="@font/turret_road_regular"
         android:hint="Navn"
+        android:maxLength="9"
+        android:textColor="#FFF"
+        android:textSize="25dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/game_title_menu"
-        android:textSize="25dp"
-        android:layout_marginTop="75dp"
-        android:background="@color/buttonColor"/>
+        app:layout_constraintTop_toBottomOf="@id/game_title_menu" />
 
     <Button
         android:id="@+id/highScore_button_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/buttonColor"
+        android:fontFamily="@font/turret_road_bold"
         android:text="Highscores"
         android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="@id/start_game_button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/enter_name_menu"
-        app:layout_constraintBottom_toBottomOf="@id/start_game_button"
-        />
+        app:layout_constraintTop_toBottomOf="@id/enter_name_menu" />
 
     <TextView
         android:id="@+id/error_message_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/turret_road_medium"
         android:textColor="#F61504"
         android:textSize="15dp"
         android:textStyle="bold"
@@ -60,13 +62,14 @@
         android:id="@+id/start_game_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="100dp"
         android:background="@color/buttonColor"
+        android:fontFamily="@font/turret_road_bold"
         android:text="Start spil"
         android:textAllCaps="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="100dp"
-        android:layout_marginTop="100dp"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
