--- a/app/src/main/res/layout/fragment_winner.xml
+++ b/app/src/main/res/layout/fragment_winner.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:layout_marginTop="50dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/turret_road_bold"
         android:text="Du har vundet \nDu brugte"
         android:textColor="#FFF"
         android:textSize="30dp"
@@ -24,7 +24,7 @@
         android:id="@+id/tryCount_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/turret_road_bold"
         android:textColor="#FFF"
         android:textSize="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -45,6 +45,7 @@
         app:layout_constraintTop_toBottomOf="@id/tryCount_text" />
 
     <TextView
+        android:fontFamily="@font/turret_road_regular"
         android:id="@+id/highScore_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -57,6 +58,7 @@
         app:layout_constraintTop_toBottomOf="@id/tryCount_text" />
 
     <TextView
+        android:fontFamily="@font/turret_road_regular"
         android:id="@+id/name_highScoreList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -68,6 +70,7 @@
         app:layout_constraintTop_toBottomOf="@id/highScore_title_text" />
 
     <TextView
+        android:fontFamily="@font/turret_road_regular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -78,6 +81,7 @@
         app:layout_constraintTop_toBottomOf="@id/highScore_title_text" />
 
     <TextView
+        android:fontFamily="@font/turret_road_regular"
         android:id="@+id/word_highScoreList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
