--- a/app/src/main/res/layout/highscore_row.xml
+++ b/app/src/main/res/layout/highscore_row.xml
@@ -7,6 +7,7 @@
     tools:background="#000">
 
     <TextView
+        android:fontFamily="@font/turret_road_regular"
         android:id="@+id/name_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:fontFamily="@font/turret_road_regular"
         android:id="@+id/tries_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -28,6 +30,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:fontFamily="@font/turret_road_regular"
         android:id="@+id/word_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
