--- a/app/src/main/res/layout/fragment_winner.xml
+++ b/app/src/main/res/layout/fragment_winner.xml
@@ -13,7 +13,7 @@
         android:textAlignment="center"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/turret_road_bold"
-        android:text="Du har vundet \nDu brugte"
+        android:text="Du har vundet \nDu havde"
         android:textColor="#FFF"
         android:textSize="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/turret_road_bold"
         android:textColor="#FFF"
         android:textSize="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
