--- a/app/src/main/res/layout/highscore_row.xml
+++ b/app/src/main/res/layout/highscore_row.xml
@@ -7,10 +7,11 @@
     tools:background="#000">
 
     <TextView
-        android:fontFamily="@font/turret_road_regular"
+        android:layout_marginTop="5dp"
         android:id="@+id/name_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/turret_road_regular"
         android:text="Navn"
         android:textColor="#FFF"
         android:textSize="15dp"
@@ -18,26 +19,39 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:fontFamily="@font/turret_road_regular"
+        android:layout_marginTop="5dp"
         android:id="@+id/tries_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/turret_road_regular"
         android:text="Antal Forkerte gæt"
         android:textColor="#FFF"
         android:textSize="15dp"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:fontFamily="@font/turret_road_regular"
+        android:layout_marginTop="5dp"
         android:id="@+id/word_highScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/turret_road_regular"
         android:text="Ord"
         android:textColor="#FFF"
         android:textSize="15dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="2dp"
+        android:height="1dp"
+        android:background="#FFF"
+        android:textSize="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name_highScore" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
