--- a/app/src/main/res/layout/fragment_highscore.xml
+++ b/app/src/main/res/layout/fragment_highscore.xml
@@ -5,34 +5,13 @@
     android:layout_height="match_parent"
     android:background="@drawable/background">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/forkert6" />
-
     <TextView
+        android:id="@+id/highScore_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:fontFamily="@font/turret_road_bold"
-        android:text="Ordet var"
-        android:textColor="#FFF"
-        android:textSize="20dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/word_reveal_loser" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
-        android:fontFamily="@font/turret_road_bold"
-        android:text="Du har tabt"
+        android:text="Highscores"
         android:textColor="#FFF"
         android:textSize="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -40,15 +19,42 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/word_reveal_loser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/turret_road_medium"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/turret_road_bold"
+        android:text="Navn"
         android:textColor="#FFF"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@id/imageView"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView_highScoreFragment"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/turret_road_bold"
+        android:text="Forsøg"
+        android:textColor="#FFF"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView_highScoreFragment"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/turret_road_bold"
+        android:text="Ord"
+        android:textColor="#FFF"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView_highScoreFragment"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_highScoreFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView" />
+        app:layout_constraintTop_toBottomOf="@id/highScore_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
