--- a/app/src/main/res/layout/fragment_loser.xml
+++ b/app/src/main/res/layout/fragment_loser.xml
@@ -22,9 +22,9 @@
         android:text="Ordet var"
         android:textColor="#FFF"
         android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@id/word_reveal_loser"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/word_reveal_loser" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/textView"
