--- a/app/src/main/res/layout/fragment_winner.xml
+++ b/app/src/main/res/layout/fragment_winner.xml
@@ -44,6 +44,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tryCount_text" />
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toTopOf="@id/highScore_title_text"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/word_reveal_winner"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/star" />
+
     <TextView
         android:id="@+id/highScore_title_text"
         android:layout_width="wrap_content"
