--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,8 @@
         android:layout_marginBottom="100dp"
         android:background="@drawable/futuristic_button"
         android:text="GÆT"
+        android:fontFamily="@font/turret_road_bold"
+        android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
