--- a/app/src/main/res/layout/fragment_my_words.xml
+++ b/app/src/main/res/layout/fragment_my_words.xml
@@ -22,11 +22,13 @@
         android:id="@+id/write_my_word"
         android:layout_width="250dp"
         android:layout_height="30dp"
-        android:digits="abcdefghijklmnopqrstuvwxyzæøåABCDEFGHIJKLMNOPQRSTUVWXYZÆØÅ"
         android:layout_marginTop="25dp"
         android:background="@color/buttonColor"
+        android:digits="abcdefghijklmnopqrstuvwxyzæøåABCDEFGHIJKLMNOPQRSTUVWXYZÆØÅ"
         android:fontFamily="@font/turret_road_regular"
         android:hint="Gem et ord"
+        android:singleLine="true"
+        android:imeOptions="actionDone"
         android:textColor="#FFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
